      flat collection trees, the difference is basically between a small
      incremental scan and a near full rescan.
    * Ask the user for confirmation before refetching lyrics and overwriting
      cached ones.
    * It is now possible to stop editing lyrics without saving changes in
      the lyrics applet.

  BUGFIXES:
    * Made playlist layouts translatable. (BR 189751)
    * Fixed issue with collection scanner seeing duplicate tracks if they
      contained the default MusicBrainz UUID. Patch by Egbert König
      <e.kunig@home.nl>. (BR 209822)
    * Fixed issues with certain types of tracks not correctly getting grouped
      together in the playlist when grouping by something other than album.
    * Splash screen no longer hides KWallet on startup. (BR 210179)
    * On Screen Display was not shown when cover image changed. (BR 195188)
    * On Screen Display was not shown on automatic track change. (BR 209376)
    * Automatic playlist scrolling was broken in some cases. (BR 193459)
    * The On Screen Display now uses a sane font size with all display
      resolutions. (BR 195186)
    * Fix rare regression where inaccessible subfolders (due to permissions)
      in the collection could not be picked up by an incremental scan when
      permissions were fixed and their mtime updated, requiring a full rescan.
    * When using a MySQL server with "Watch Folders For Changes" disabled,
      very long periods of idle Amarok could allow the server to close the
      local connection. This is now detected and should be worked around. 
    * Correctly set the lyrics applet's title when displaying HTML formatted lyrics
    * Track selection is now correctly preserved when using Dynamic Playlists.
      Patch by John Atkinson <john@fauxnetic.co.uk>. (BR 208349)
    * Cover Manager no longer stops when one cover cannot be fetched. Patch by
      Tycho Andersen <kdebugs@tycho.ws>. (BR 205032)